# LLM.rs

./: .gitignore  Agent.md  Cargo.toml  Dockerfile  README-ZH.md  README.md  config.toml  llmrs交接文档.md  ourcesappoutvsworkbenchcontribterminalcommonscriptssafe_rm_aliases.ps1 } catch{} ; Write-Output [Trae CN] Safe Rm alias is not enabled, try to fix it now.
examples/: candle_perf.rs
scripts/: run.sh
src/: backend.rs  config.rs  main.rs  queue.rs  types.rs
src/backend/: candle.rs
