[package]
name = "llmrs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
toml = "0.8"
tokenizers = "0.15.0"
sysinfo = "0.30"

# macOS 使用 Accelerate framework
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.2", features = ["accelerate"] }
candle-transformers = { version = "0.9.2", features = ["accelerate"] }
candle-nn = { version = "0.9.2", features = ["accelerate"] }

# Linux 无加速（纯 CPU，兼容性最好）
[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }
candle-nn = { version = "0.9.2" }

# Windows 无加速
[target.'cfg(target_os = "windows")'.dependencies]
candle-core = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }
candle-nn = { version = "0.9.2" }
